--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light">London London  London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bazaarvoice/a35b8570-89d8-4ab9-bda6-e588acdcc74c'>Bazaarvoice - Senior iOS Mobile Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/bazaarvoice/a35b8570-89d8-4ab9-bda6-e588acdcc74c'>Bazaarvoice - Senior iOS Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803394'>Job Application for Senior iOS Engineer - Singapore Based at foodpanda Philippines</a></h5> 
+<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803394'>Job Application for Senior iOS Engineer - Singapore Based at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shapesecurity/4a5c90b0-b5da-45ce-8860-e07a7b6337ed'>Shape Security - Senior iOS Engineer, Toronto</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shapesecurity/4a5c90b0-b5da-45ce-8860-e07a7b6337ed'>Shape Security - Senior iOS Engineer, Toronto</a></h5> 
 <p><span class="badge badge-light">Toronto  Toronto  Toronto</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -130,7 +130,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/1365a115-9512-4dd8-b797-5245a320e72a'>Xfers - Lead iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/1365a115-9512-4dd8-b797-5245a320e72a'>Xfers - Lead iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -161,7 +161,7 @@ like? mobile applications. ? Experience with e-commerce applications in a?...</p
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/450042-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/450042-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -204,7 +204,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4481417002'>Job Application for iOS Engineer at Tandem Bank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4481417002'>Job Application for iOS Engineer at Tandem Bank</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -258,7 +258,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Helsinki, Finland</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ribbon/jobs/4474671002'>Job Application for iOS Engineer at Ribbon</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ribbon/jobs/4474671002'>Job Application for iOS Engineer at Ribbon</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -270,7 +270,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912686'>Job Application for Principal, iOS Engineer[FinTech Business & Systems] at Coupang(TECH)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912686'>Job Application for Principal, iOS Engineer[FinTech Business & Systems] at Coupang(TECH)</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -315,7 +315,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697169649-senior-ios-engineer-ui-systems'>Square Senior iOS Engineer, UI Systems | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999697169649-senior-ios-engineer-ui-systems'>Square Senior iOS Engineer, UI Systems | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -335,7 +335,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/418122-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/418122-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -348,7 +348,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p>Oct 1, 2019 ... Egencia. Launched in 2002 as Expedia Corporate Travel, Egencia has become 
 the fourth largest Travel Management Company in the world because of our?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tileapp/5565c171-ff11-48dd-bfa6-94b3b2a0fb3e'>Tile - iOS Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tileapp/5565c171-ff11-48dd-bfa6-94b3b2a0fb3e'>Tile - iOS Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -399,7 +399,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA  United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1857012'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1857012'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
